# docs2md

./: .env.example  .gitignore  README.md  all2md.py  cli.py  mcp_server.py  package-lock.json  pyproject.toml  requirements.txt  run.py  server.js
backend/: config.py  main.py
backend/converters/: doc2docx_converter.py  docx_converter.py  excel_converter.py  image_converter.py  pdf_converter.py  txt_converter.py
backend/routers/: convert.py  files.py
backend/services/: qwen_vl.py
backend/utils/: traversal.py
converters/: doc_converter.py  excel_converter.py  pdf_converter.py  video_converter.py
docs/: ai_skills_guide.md  pypi_release.md
frontend/: index.html
frontend/js/: app.js
public/: index.html
src/docs2md/: __init__.py  cli.py
src/docs2md/converters/: __init__.py  doc2docx_converter.py  docx_converter.py  excel_converter.py  image_converter.py  pdf_converter.py  txt_converter.py
src/docs2md/services/: __init__.py  qwen_vl.py
src/docs2md/utils/: __init__.py  traversal.py
