[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docs2md"
version = "0.1.0"
description = "将文档/图片转换为 Markdown 或纯文本的工具包（含 CLI）"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "docs2md contributors" }]
keywords = ["markdown", "docx", "pdf", "excel", "converter", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing",
]
dependencies = [
  "python-docx>=1.0.0",
  "markitdown>=0.0.1",
  "openai>=1.0.0",
  "pymupdf>=1.23.0",
  "Pillow>=10.0.0",
  "xlrd>=2.0.1",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "python-multipart>=0.0.6",
  "python-dotenv>=1.0.0",
  "aiofiles>=23.0.0",
]
legacy-win = [
  "pywin32>=306; sys_platform == \"win32\"",
]

[project.scripts]
docs2md = "docs2md.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
